# clapping

./: README.md  clapping.ly  clapping.raw  pyproject.toml  template.ly
clapping/: cli.py
