[tool.poetry]
name = "clapping"
version = "0.1.0"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
transform = 'clapping.cli:transform'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
